fix page nav appearence on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -300,6 +300,7 @@ button:focus-visible {
   }
 
   .page-nav{
+    width: 90%;
     margin: auto;
     }
   .page-nav p{
